[package]
name = "galaxy"
version = "0.1.0"
authors = ["Alexei Samokvalov <alexei@sam701.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.8"
syconf-serde = { path = "../syconf/syconf-serde" }
serde = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt"] }
